# kobuki-service

./: README.md
service_forward/: CMakeLists.txt  package.xml
service_forward/include/service_forward/: ClientNode.hpp  ServerNode.hpp
service_forward/launch/: launch.py
service_forward/src/: client.cpp  server.cpp
service_forward/src/service_forward/: ClientNode.cpp  ServerNode.cpp
service_forward_interfaces/: CMakeLists.txt  package.xml
service_forward_interfaces/action/: GenerateInformation.action
service_forward_interfaces/srv/: GetInformation.srv
